# fq-compressor

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  AGENTS.md  ALGORITHM.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE-old.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  QWEN.md  README.en.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  RELEASE_zh.md  architecture_friction_points.md  conanfile.py  findings.md  help.md  package-lock.json  package.json  progress.md  task_plan.md
.arts/: launch.json
.claude/: index.json  settings.json  settings.local.json
.devcontainer/: README.md  devcontainer.clion.json  devcontainer.json  devcontainer.simple.json  setup-sshd.sh  start-sshd.sh
.github/: CODEOWNERS  copilot-instructions.md
.trellis/: .template-hashes.json
.windsurf/: rules.md
benchmark/: benchmark.py  benchmark_parallel.sh  compiler_benchmark.py  datasets.yaml  run_benchmark.sh  tools.yaml  visualize_benchmark.py
benchmark_v2/: CODEC_GATES.md  __init__.py  cli.py  evidence.py  manifest.py  models.py  prepare_inputs.py  report.py  runner.py  tool_adapters.py  unified_runner.py
changelog/: 2026-01-14-create-reference-doc.md  2026-01-14-design-review-improvements.md  2026-01-14-fq-compressor-cli-versioning-io-updates.md  2026-01-14-fq-compressor-spec-abc-scm-updates.md  2026-01-14-fq-compressor-spec-design-updates.md  2026-01-14-fq-compressor-spec-final-consistency-fixes.md  2026-01-14-update-readme.md  2026-01-15-coding-standards-git-and-antipatterns.md  2026-01-15-coding-standards-unification.md  2026-01-15-design-consistency-fixes.md  2026-01-15-engineering-setup-complete.md  2026-01-15-engineering-standards-review.md  2026-01-15-fastq-tools-style-config-update.md  2026-01-15-long-read-boundary-zstd.md  2026-01-15-spec-deep-review-fixes.md  2026-01-15-spring-length-compat.md  2026-01-16-src-architecture-optimization.md  2026-01-18-devcontainer-docker-sync.md  2026-01-22-buffer-pool-alignment.md  2026-01-22-devcontainer-proxy-fix.md  2026-01-22-tbb-parallel-pipeline.md  2026-01-23-clion-devcontainer-fix.md  2026-01-23-devcontainer-host-data-mount.md  2026-01-23-devcontainer-optimization.md  2026-01-29-cmake-presets-toolchain-fix.md  2026-01-29-compiler-warnings-fix.md  2026-01-29-fix-gzip-fastq-input.md  2026-02-25-devcontainer-config-optimization.md  2026-02-25-docker-build-optimization.md  2026-02-25-docs-kebab-case-rename.md  2026-02-25-src-bugfix-and-optimization.md  2026-02-25-tests-scripts-overhaul.md  2026-03-08-toolchain-stability-fixes.md  2026-03-10-github-pages-optimization.md  2026-03-22-documentation-and-licensing-alignment.md  2026-03-22-explicit-unsupported-feature-handling.md  2026-03-22-implement-original-order-decompression-mvp.md  2026-03-22-low-risk-cleanup-and-wording-alignment.md
cmake/: FQCompressorConfig.cmake.in  fqc_coverage.cmake  fqc_sanitizers.cmake
docker/: .env.example  Dockerfile  Dockerfile.alpine-release  Dockerfile.clang-release  Dockerfile.dev  Dockerfile.glibc-release  Dockerfile.musl-release  docker-compose.yml  start_devcontainer.sh
docs/: 02-strategy-evaluation.md  04_implementation_status.md  BENCHMARK.md  BENCHMARK_SUMMARY.md  COMPREHENSIVE_DIAGNOSIS.md  ISSUES.md  PHASE3_SUMMARY.md  PROJECT_SUMMARY.md  README.md  REPAIR_PROGRESS.md  TEST_RESULTS.md  WEBSITE_MIGRATION.md  index.md  issues-detailed.md  package-lock.json  package.json  phase3-summary.md  phase4-usage-guide.md  phase4_usage_guide.md  repair-progress.md  tsconfig.json
fq-compressor/: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CMakePresets.json  conanfile.py
openspec/: config.yaml
performance/: INDEX.md  README.md
ref-projects/: README.md
scripts/: acceptance.sh  benchmark.sh  benchmark_v2.sh  build.sh  (+9 more)
src/: CMakeLists.txt  main.cpp
src/algo/: block_compressor.cpp  global_analyzer.cpp  id_compressor.cpp  pe_optimizer.cpp  quality_compressor.cpp
src/commands/: archive_engine.cpp  compress_command.cpp  compress_command.h  compression_engine.cpp  compression_profile.cpp  decompress_command.cpp  decompress_command.h  info_command.cpp  info_command.h  v2_archive_engine.cpp  verify_command.cpp  verify_command.h
src/common/: error.cpp  logger.cpp  memory_budget.cpp
src/format/: archive.cpp  fqc_reader.cpp  fqc_writer.cpp  reorder_map.cpp  v2_archive.cpp
src/io/: async_io.cpp  compressed_stream.cpp  fastq_parser.cpp  paired_end_parser.cpp  stream_factory.cpp
src/pipeline/: compress_pipeline.cpp  compressor_node.cpp  decompressor_node.cpp  fastq_writer_node.cpp  fqc_reader_node.cpp  pipeline.cpp  pipeline_node.cpp  reader_node.cpp  writer_node.cpp
tests/: .gitkeep  CMakeLists.txt  README.md  placeholder_test.cpp
tests/algo/: algo_regression_test.cpp  block_compressor_regression_test.cpp  id_compressor_property_test.cpp  long_read_property_test.cpp  pe_property_test.cpp  quality_compressor_property_test.cpp  two_phase_compression_property_test.cpp
tests/commands/: archive_engine_test.cpp  archive_regression_test.cpp  compression_engine_test.cpp  compression_profile_test.cpp  compression_request_test.cpp  original_order_command_test.cpp  thread_behavior_test.cpp  v2_archive_engine_test.cpp
tests/common/: error_test.cpp  memory_budget_test.cpp
tests/e2e/: benchmark_smoke_failure_guard_test.sh  benchmark_smoke_test.sh  benchmark_v2_smoke_test.sh  cli_smoke_test.sh  devcontainer_adapter_contract_test.sh  devcontainer_host_sync_test.sh  devcontainer_sshd_lib_test.sh  devcontainer_validate_test.sh  test_cli.sh  test_performance.sh
tests/format/: archive_test.cpp  fqc_format_property_test.cpp  fqc_writer_test.cpp  v2_archive_test.cpp
tests/io/: async_io_test.cpp  compressed_stream_test.cpp  fastq_parser_property_test.cpp  fastq_parser_test.cpp  stream_factory_test.cpp
tests/pipeline/: backpressure_controller_test.cpp  chunk_marshal_test.cpp  pipeline_node_headers_test.cpp  pipeline_nodes_header_test.cpp  pipeline_property_test.cpp  pipeline_test.cpp  spsc_queue_test.cpp
(+443 files in other folders)
